# smithery-ai-1password-mcp-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Pipfile  README.md  SECURITY.md  TODO.md  create_security_issues.sh  mkdocs.yml  pyproject.toml  security_issues.json  smithery.yaml  test_security_only.py  test_structure.py
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  SECURITY_GUIDE.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  getting-started.md  index.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
onepassword_mcp_server/: __init__.py  config.py  mcp_protocol_compliance.py  monitoring.py  resilience.py  security_hardening.py  server.py  structured_logging.py  test_p1_features.py  test_security_hardening.py  test_unit.py
